# granit

./: .bears.yml  .gitignore  .mcp.json  CLAUDE.md  Cargo.toml  README.md  Trunk.toml  esbuild.mjs  granit.key.pub  index.html  package-lock.json  package.json  styles.css
.bears/: 26a-add-render-note-tauri-command-and-ipc-wrapper.md  2bm-tauri-release-workflow-tag-triggered.md  2cf-wiki-link-resolution-should-respect-code-blocks.md  2qt-verify-icon-parsing-persistence-and-fallback-behavior.md  3ej-cleanup-remove-dead-secrets-code-close-superseded-tasks.md  3gf-config-merge-via-trait-instead-of-manual-fields.md  3kk-extract-cave-child-path-update-helper.md  3ps-github-actions-ci-cd.md  3s4-separate-current-cave-state-from-recent-history.md  3sh-implement-read-note-and-read-active-note-tools.md  443-agent-panel-chat-ui-with-message-bubbles-and-streaming.md  46x-rewrite-theme-picker-ui-for-daisyui-themes.md  4cm-architectural-refactoring-and-bug-fixes.md  4uk-full-launch-verification-pass.md  54k-buttons-replace-hand-rolled-button-styles-with-btn-classes.md  56r-fix-appimage-egl-crash-strip-bundled-libwayland-at-bundle-time.md  5d2-design-nested-note-identity-and-folder-invariants.md  5js-add-fontconfig-types-to-config-system.md  5js-settings-modal-font-controls.md  5nd-apply-font-configs-to-editor-preview-and-chat.md  5qp-replace-message-tuple-with-named-struct.md  5rd-auto-bump-the-cask-from-release-yml.md  64k-render-agent-messages-with-markdown-formatting.md  6hv-multi-provider-llm-support-ollama-anthropic.md  6rf-build-searchable-icon-picker-in-frontmatter-editor.md  6ry-implement-create-note-create-folder-move-note-tools.md  6uq-carry-icons-through-cave-and-ipc-flows.md  6wq-remove-cave-variant-from-configerror.md  79f-extend-note-metadata-for-optional-icon.md  7dj-add-missing-backend-tests.md  7gm-windows-release-target-in-release-yml.md  7mj-set-up-css-custom-properties-and-tailwind-theme-tokens.md  7px-add-symlink-containment-to-cave-operations.md  7q3-define-providerconfig-enum-and-update-agentconfig-in-granit-types.md  7t6-code-highlighting-hl-github-alerts-responsive-polish.md  82y-frontend-testing-infrastructure.md  83x-remove-custom-theme-themeregistry-backend-and-shared-types.md  8b3-build-nested-cave-explorer-and-note-workflows.md  8fv-register-all-tools-on-agent-builder.md  8fz-implement-edit-note-and-edit-active-note-tools.md  (+148 more)
.claude/agents/: planner.md
.claude/skills/aphid-content/: SKILL.md
.claude/skills/aphid-theme/: SKILL.md
.claude/skills/bears-planning/: SKILL.md
.claude/skills/bears-planning/references/: cli-fallback.md
.githooks/: pre-commit  pre-push
.github/: copilot-instructions.md
.github/instructions/: daisyui.instructions.md  leptos-frontend.instructions.md  markdown-processing.instructions.md  tauri-backend.instructions.md
.github/skills/bears-planning/: SKILL.md
.github/skills/granit-agent/: SKILL.md
.github/skills/rig/: SKILL.md
.github/skills/rig-agent/: SKILL.md
.github/workflows/: ci.yml  debug-token.yml  docs.yml  release.yml
docs/: aphid.toml
docs/content/: 404.md  home.md  wiki.md
docs/content/pages/: about.md  download.md
docs/content/wiki/: agent-tools-and-rag.md  ai-agent.md  cave-rules.md  configuration.md  daily-notes.md  explorer.md  getting-started.md  installation.md  notes-and-markdown.md  templates.md  themes.md  todos.md  wiki-links.md
docs/static/: install.sh
docs/theme/: theme.toml
docs/theme/templates/: 404.html  base.html  blog_index.html  blog_post.html  home.html  page.html  pagination.html  tag.html  tags_index.html  wiki_index.html  wiki_page.html
granit-types/: Cargo.toml
granit-types/src/: agent.rs  config.rs  document.rs  error.rs  events.rs  icons.rs  lib.rs  metadata.rs  note.rs  theme.rs  update.rs
js/: editor.ts
src-tauri/: Cargo.toml  build.rs  tauri.conf.json  tauri.linux.conf.json  tauri.macos.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: lib.rs  main.rs
src-tauri/src/agent/: error.rs  mod.rs  vectordb.rs
src-tauri/src/agent/tools/: create_note.rs  delete_note.rs  edit_active_note.rs  edit_note.rs  list_notes.rs  mod.rs  navigation.rs  organization.rs  read_active_note.rs  read_note.rs  reading.rs  search_notes.rs  todos.rs  update_note.rs  web.rs  web_fetch.rs  web_search.rs  writing.rs
src-tauri/src/cave/: error.rs  folders.rs  helpers.rs  mod.rs  note.rs  notes.rs  search.rs  tags.rs  templates.rs  todos.rs
src-tauri/src/commands/: agent.rs  cave.rs  config.rs  mod.rs  state.rs  store.rs  updater.rs
src-tauri/src/config/: error.rs  mod.rs  secrets.rs
src-tauri/src/markdown/: builder.rs  frontmatter.rs  mod.rs  render.rs
src-tauri/src/theme/: mod.rs
src/app/: agent_panel.rs  context.rs  editor.rs  info.rs  ipc.rs  markdown_links.rs  mod.rs  settings_modal.rs  sidebar.rs  types.rs
src/app/agent/: messages.rs  mod.rs  mode_selector.rs  model_selector.rs  provider_selector.rs  streaming.rs
src/app/components/: agent_panel.rs  cave_selector.rs  editor.rs  font_picker.rs  font_selector.rs  icon_picker.rs  icons.rs  mod.rs  modal.rs  model_selector.rs  note_icons.rs  note_list.rs  provider_selector.rs  release_notes.rs  settings_modal.rs  sidebar.rs
src/app/editor/: codemirror.rs  frontmatter.rs  mod.rs  reader.rs  save_queue.rs  text_editing.rs  writer.rs
src/app/explorer/: calendar.rs  cave_selector.rs  favorites.rs  mod.rs  search.rs  tags.rs  templates.rs  todo.rs
src/app/explorer/todo/: mod.rs  (+1 more)
src/app/settings/: agent.rs  markdown.rs  mod.rs  notes.rs  reading.rs  theme.rs
tests/: web.rs
(+26 files in other folders)
