[package]
name = "granit-ui"
version = "0.1.1"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[dependencies]
leptos = { version = "0.8", features = ["csr"] }
wasm-bindgen = "0.2"
wasm-bindgen-futures = "0.4"
js-sys = "0.3"
serde = { version = "1", features = ["derive"] }
serde-wasm-bindgen = "0.6"
console_error_panic_hook = "0.1.7"
web-sys = { version = "0.3.91", features = ["Window", "Element", "HtmlAnchorElement", "EventTarget", "DataTransfer", "DragEvent", "Navigator"] }
granit-types = { path = "granit-types" }
gloo-timers = { version = "0.4.0", features = ["futures"] }
serde_json = "1.0.149"
leptos_icons = "0.7.1"
icondata_lu = "0.1.0"
icondata_core = "0.1.0"

[dev-dependencies]
wasm-bindgen-test = "0.3"

[workspace]
members = ["src-tauri", "granit-types"]
