[package]
name = "granit-types"
version.workspace = true
edition = "2021"

[dependencies]
chrono = { version = "0.4.45", features = ["serde"] }
icondata_core = "0.1.0"
icondata_lu = "0.1.0"
icondata_mdi = "0.1.0"
serde = { version = "1", features = ["derive"] }

[dev-dependencies]
serde_json = "1.0.150"
serde_yml = "0.0.13"
