[package]
name = "granit"
version.workspace = true
description = "A Tauri App"
authors = ["you"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "granit_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-opener = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "2.0.18"
serde_yml = "0.0.12"
tauri-plugin-dialog = "2.6.0"
granit-types = { path = "../granit-types" }
pulldown-cmark = "0.13.3"
chrono = { version = "0.4.44", features = ["serde"] }
tokio = { version = "1.50.0", features = ["rt-multi-thread", "macros"] }
#ig-core = { version = "0.34.0", path = "../../rig/rig/rig-core" }
rig-core = "0.35.0"
futures = "0.3.32"
font-kit = "0.14.3"
reqwest = { version = "0.13.2", features = ["json", "query"] }
html-to-markdown-rs = "3.1.0"
tauri-plugin-store = "2.4.2"
tera = "1.20.1"

[dev-dependencies]
tempfile = "3.27.0"
